@@ -627,11 +627,8 @@ let link objfiles output_name =
     | _                  -> "stdlib.cma" :: objfiles @ ["std_exit.cmo"]
   in
   let tolink = List.fold_right scan_file objfiles [] in
-  let missing_modules =
-    Ident.Map.filter (fun id _ -> not (Ident.is_predef id)) !missing_globals
-  in
   begin
-    match Ident.Map.bindings missing_modules with
+    match Ident.Map.bindings !missing_globals with
     | [] -> ()
     | (id, cu_name) :: _ ->
         if DepSet.is_empty !badly_ordered_dependencies
