@@ -348,10 +348,10 @@ let defined_globals patchlist =
     patchlist
 
 let required_globals patchlist =
-  let not_predef id = not (Ident.is_predef id) in
+  let is_compunit id = not (Ident.is_predef id) in
   List.fold_left (fun accu rel ->
       match rel with
-      | (Reloc_getglobal id, _pos) when (not_predef id) -> id :: accu
+      | (Reloc_getglobal id, _pos) when (is_compunit id) -> id :: accu
       | _ -> accu)
     []
     patchlist
